- Fix dropdowns on search page - Fix footer showing scrollbars - Remove service worker. - Adjust visuals of tag coutner badge in search page - Fix field export to use correct display order

--- a/LoadingArtistCrowdSource/Client/Pages/Search/Search.razor.css
+++ b/LoadingArtistCrowdSource/Client/Pages/Search/Search.razor.css
@@ -4,3 +4,6 @@
 	background-color: #f8f9fa;
 }
 
+::deep.typeahead-tag .badge {
+	vertical-align: text-bottom;
+}
