--- a/LoadingArtistCrowdSource/Client/wwwroot/css/app.css
+++ b/LoadingArtistCrowdSource/Client/wwwroot/css/app.css
@@ -136,11 +136,11 @@ a, .btn-link {
 
 
 .footer {
-	overflow: scroll;
+	overflow: auto;
 	white-space: nowrap;
 	/* Set the fixed height of the footer here */
 	height: 60px;
-	line-height: 60px; /* Vertically center the text there */
+	line-height: 59px; /* Vertically center the text there */
 }
 
 .blazored-typeahead.valid.modified,
